--- a/pstyle.css
+++ b/pstyle.css
@@ -307,6 +307,9 @@ form .btn2{
     font-weight: 300;
     margin-top: 20px;
 }     
+.copyright i{
+    color: #ff004f;
+}
 nav .fa-solid{
     display: none;
 }
